[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/annotate_draw_in_editor/scenes/toolbar_button/ToolbarButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/annotate_draw_in_editor/assets/icons/clear_icon.svg" type="Texture" id=2]
[ext_resource path="res://addons/annotate_draw_in_editor/scenes/Toolbar.gd" type="Script" id=3]

[node name="Toolbar" type="HBoxContainer"]
anchor_right = 1.0
margin_bottom = 14.0
size_flags_vertical = 0
custom_constants/separation = 8
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_top = 5.0
margin_right = 160.0
margin_bottom = 19.0
text = "Annotate - Draw in Editor"

[node name="MC" type="MarginContainer" parent="."]
margin_left = 168.0
margin_right = 176.0
margin_bottom = 24.0
custom_constants/margin_right = 8

[node name="DrawButton" parent="." instance=ExtResource( 1 )]
margin_left = 184.0
margin_right = 208.0

[node name="DrawSize" type="HSlider" parent="."]
margin_left = 216.0
margin_top = 4.0
margin_right = 316.0
margin_bottom = 20.0
rect_min_size = Vector2( 100, 0 )
size_flags_vertical = 4
min_value = 1.0
max_value = 10.0
value = 2.0
scrollable = false

[node name="DrawSizeLabel" type="Label" parent="."]
margin_left = 324.0
margin_top = 5.0
margin_right = 332.0
margin_bottom = 19.0
text = "2"

[node name="MC2" type="MarginContainer" parent="."]
margin_left = 340.0
margin_right = 348.0
margin_bottom = 24.0
custom_constants/margin_right = 8

[node name="ClearButton" parent="." instance=ExtResource( 1 )]
margin_left = 356.0
margin_right = 380.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
icon = ExtResource( 2 )

[node name="MC3" type="MarginContainer" parent="."]
margin_left = 388.0
margin_right = 396.0
margin_bottom = 24.0
custom_constants/margin_right = 8

[node name="Label2" type="Label" parent="."]
margin_left = 404.0
margin_top = 5.0
margin_right = 441.0
margin_bottom = 19.0
text = "Color:"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_left = 449.0
margin_right = 494.0
margin_bottom = 24.0
text = "Color"
align = 0
color = Color( 1, 1, 1, 1 )
